# ORIE5270-Project

./: .gitignore  README.md  pyproject.toml
Proj/: AGENTS.md  Blueprint.md
Proj/data/processed/: adj_close.csv  adj_close_clean.csv  close.csv  close_clean.csv  macro.csv  macro_aligned.csv  price_data_source.txt  regime_features.csv  returns.csv  volume.csv  volume_clean.csv
Proj/data/raw/: fred_BAMLH0A0HYM2.csv  fred_VIXCLS.csv  yahoo_chart_ohlcv_raw.csv
Proj/docs/: 01_literature_review.md  02_theoretical_model.md  03_market_regime_design.md  04_empirical_section.md  catchup_report_share.html  zoom_progress_report.html
Proj/docs/scripts/: generate_zoom_progress_report.py  make_standalone_html.py
Proj/improvements/: README.md
Proj/improvements/01_robust_return_forecasts/: README.md  run_experiment.py
Proj/improvements/02_weak_alpha_mpc/: README.md  weak_alpha_mpc_experiment.py
Proj/improvements/03_validation_tuning/: README.md  manifest.json  run_summary.md  run_validation_tuning.py
Proj/improvements/04_defensive_asset/: README.md  run_defensive_asset_experiment.py
Proj/improvements/05_v2_combined_model/: README.md  run_v2_experiment.py
Proj/improvements/06_v3_rolling_regime_mpc/: README.md  run_v3_experiment.py
Proj/outputs/reports/: baseline_summary.md  (+2 more)
Proj/scripts/: diagnose_underperformance.py  run_baselines.py  run_empirical.py
docs/: data.md  methodology.md  reproducibility.md
src/regime_mpc/: backtest.py  cli.py  data.py  features.py  metrics.py  optimization.py  regimes.py
tests/: test_backtest.py  test_cli.py  test_data.py  test_features.py  test_metrics.py  test_optimization.py  test_package_import.py  test_regimes.py
(+123 files in other folders)
