[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-mpc-portfolio"
version = "0.1.0"
description = "Regime-aware multi-period portfolio optimization with transaction costs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "ORIE 5270 Project Team" }
]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "cvxpy>=1.4",
    "hmmlearn>=0.3",
    "yfinance>=0.2",
    "pandas-datareader>=0.10",
    "requests>=2.31",
    "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.6"
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5"
]

[project.urls]
Repository = "https://github.com/Kasenotcase/ORIE5270-Project"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=regime_mpc",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.coverage.run]
source = ["src/regime_mpc"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true